--- a/style.css
+++ b/style.css
@@ -77,3 +77,24 @@ img {
   width: 12em;
   height: auto;
 }
+
+.label_and_checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.checkbox_group {
+  display: flex;
+  align-items: center;
+}
+.label_and_checkbox label {
+  margin-right: 10px;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.checkbox_group label {
+  margin-left: 10px;
+}
