--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ form {
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  position: relative;
 }
 label {
   display: block;
@@ -82,17 +83,15 @@ img {
   height: auto;
 }
 
-.label_and_checkbox {
+.checkbox_group {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-right: 10px;
 }
 .checkbox_group {
   display: flex;
   align-items: center;
-}
-.label_and_checkbox label {
-  margin-right: 10px;
 }
 .container {
   display: flex;
@@ -138,6 +137,17 @@ button:disabled {
   top: -5px;
 }
 
+.checkbox_group {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-top: 1em;
+}
+.checkbox_group input[type="checkbox"] {
+  position: relative;
+  top: -3px;
+}
+
 /* Media query for screens smaller than 600px */
 
 @media (max-width: 600px) {
@@ -149,7 +159,15 @@ button:disabled {
   }
 
   form {
-    margin: auto;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto;
+  }
+  .checkbox_group {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-top: 1em;
   }
 
   #extracontent img {
@@ -160,17 +178,6 @@ button:disabled {
   #extracontent {
     justify-content: center;
     display: flex;
-  }
-
-  .label_and_checkbox,
-  .checkbox_group {
-    flex-direction: column; /* Stack the elements vertically */
-    align-items: flex-start; /* Align the elements to the start */
-  }
-
-  .label_and_checkbox label,
-  .checkbox_group label {
-    margin: 0.5em 0; /* Add some vertical margin */
   }
   #questionVideo,
   #answerRecorder {
@@ -194,9 +201,9 @@ button:disabled {
     margin: 10px;
     font-size: 1em;
   }
-  #answerRecorderWarning{
+  #answerRecorderWarning {
     word-wrap: break-word;
-    overflow-wrap: break-word
+    overflow-wrap: break-word;
     word-break: break-word;
   }
 }
